add web master meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="2xZHVbB9I1YKtpw2WGdFW8Gcy8Pf-MW2SDOFk6EiBMc" />
+    <meta name="naver-site-verification" content="da83b6c73c50a26cf7b2313355b01c3b63fd4f83" />
     <title>우리 아이 새해 첫 코딩 챌린지</title>
     
     <!-- Tailwind CSS (CDN) -->
