edit seo, add banner img

--- a/index.html
+++ b/index.html
@@ -5,8 +5,123 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="2xZHVbB9I1YKtpw2WGdFW8Gcy8Pf-MW2SDOFk6EiBMc" />
     <meta name="naver-site-verification" content="da83b6c73c50a26cf7b2313355b01c3b63fd4f83" />
-    <title>우리 아이 새해 첫 코딩 챌린지</title>
-    
+
+    <!-- SEO Meta Tags -->
+    <title>우리 아이 새해 첫 코딩 챌린지 | 무료 어린이 코딩 교육 - 해달에듀</title>
+    <meta name="description" content="2025년 설날, 아이가 직접 만든 디지털 연하장으로 가족에게 감동을 선물하세요! 옥토스튜디오로 쉽고 재미있게 배우는 무료 어린이 코딩 챌린지. 선착순 무료 참가 신청 중!" />
+    <meta name="keywords" content="어린이 코딩, 코딩 교육, 무료 코딩, 옥토스튜디오, 초등학생 코딩, 유아 코딩, 블록 코딩, 새해 카드, 디지털 연하장, 코딩 챌린지, 해달에듀, EBS 이솦" />
+    <meta name="author" content="해달에듀" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://haedalprogramming.github.io/codingChallenge/" />
+
+    <!-- Open Graph (Facebook, KakaoTalk, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="우리 아이 새해 첫 코딩 챌린지 | 무료 어린이 코딩 교육" />
+    <meta property="og:description" content="2025년 설날, 아이가 직접 만든 디지털 연하장으로 가족에게 감동을 선물하세요! 옥토스튜디오로 쉽고 재미있게 배우는 무료 코딩 챌린지." />
+    <meta property="og:image" content="https://haedalprogramming.github.io/codingChallenge/banner.png" />
+    <meta property="og:url" content="https://haedalprogramming.github.io/codingChallenge/" />
+    <meta property="og:site_name" content="우리 아이 첫 코딩 챌린지" />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="우리 아이 새해 첫 코딩 챌린지 | 무료 어린이 코딩 교육" />
+    <meta name="twitter:description" content="2025년 설날, 아이가 직접 만든 디지털 연하장으로 가족에게 감동을 선물하세요!" />
+    <meta name="twitter:image" content="https://haedalprogramming.github.io/codingChallenge/banner.png" />
+
+    <!-- Naver Blog/Cafe Optimization -->
+    <meta property="naverblog:title" content="우리 아이 새해 첫 코딩 챌린지" />
+    <meta property="naverblog:description" content="무료 어린이 코딩 교육 - 옥토스튜디오로 배우는 디지털 연하장 만들기" />
+
+    <!-- Structured Data (JSON-LD) for Google -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Event",
+        "name": "우리 아이 새해 첫 코딩 챌린지",
+        "description": "2025년 설날, 아이가 직접 만든 디지털 연하장으로 가족에게 감동을 선물하세요! 옥토스튜디오로 쉽고 재미있게 배우는 무료 어린이 코딩 챌린지.",
+        "startDate": "2025-01-17",
+        "endDate": "2025-02-27",
+        "eventStatus": "https://schema.org/EventScheduled",
+        "eventAttendanceMode": "https://schema.org/OnlineEventAttendanceMode",
+        "location": {
+            "@type": "VirtualLocation",
+            "url": "https://haedalprogramming.github.io/codingChallenge/"
+        },
+        "image": "https://haedalprogramming.github.io/codingChallenge/banner.png",
+        "organizer": {
+            "@type": "Organization",
+            "name": "해달에듀",
+            "url": "https://hdedu.kr"
+        },
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "KRW",
+            "availability": "https://schema.org/InStock",
+            "validFrom": "2025-01-15"
+        },
+        "performer": {
+            "@type": "Organization",
+            "name": "EBS 이솦"
+        }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "해달에듀",
+        "url": "https://hdedu.kr",
+        "logo": "https://haedalprogramming.github.io/codingChallenge/banner.png",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "edu@haedal.io",
+            "contactType": "customer service"
+        }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "코딩을 한 번도 안 해봤는데 가능한가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "네, 완전 초보도 가능합니다! 옥토 스튜디오는 유치원생도 할 수 있을 만큼 직관적입니다. 기초부터 차근차근 알려주는 가이드 영상을 무료로 제공해 드립니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "부모님이 꼭 도와줘야 하나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "아이 스스로 할 수 있도록 설계되었지만, 가족 반응을 촬영할 때는 부모님이 카메라맨이 되어주시면 더 멋진 영상이 나옵니다."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "참가비는 정말 무료인가요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "네, 이번 시즌은 시범 운영 기간으로 전액 무료입니다. 다음 시즌부터는 유료 교육 과정으로 전환될 예정이니 이번 기회를 놓치지 마세요!"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "롱폼(가로 영상)은 안 되나요?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "가능하지만, 이번 챌린지는 조회수 경쟁이므로 '쇼츠'나 '릴스' 같은 숏폼이 훨씬 유리합니다."
+                }
+            }
+        ]
+    }
+    </script>
+
     <!-- Tailwind CSS (CDN) -->
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -22,8 +137,9 @@
 </head>
 <body class="font-sans text-gray-800 bg-gray-50 min-h-screen">
 
-    <!-- Navigation -->
-    <nav class="fixed w-full z-50 bg-white/90 backdrop-blur-md shadow-sm">
+    <!-- Header with Navigation -->
+    <header>
+    <nav class="fixed w-full z-50 bg-white/90 backdrop-blur-md shadow-sm" role="navigation" aria-label="메인 네비게이션">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="text-xl font-bold text-orange-600 flex items-center gap-2">
                 <span class="bg-orange-100 p-1 rounded-lg">🧧</span>
@@ -60,13 +176,17 @@
             </button>
         </div>
     </nav>
+    </header>
+
+    <!-- Main Content -->
+    <main>
 
     <!-- Hero Section -->
     <section id="hero" class="relative pt-24 pb-16 md:pt-32 md:pb-24 overflow-hidden">
         <div class="absolute inset-0 z-0">
             <img 
                 src="https://images.unsplash.com/photo-1542037104857-ffbb0b9155fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80" 
-                alt="Family Background" 
+                alt="가족이 함께하는 어린이 코딩 교육 - 우리 아이 첫 코딩 챌린지" 
                 class="w-full h-full object-cover opacity-20"
             />
             <div class="absolute inset-0 bg-gradient-to-b from-orange-50/80 to-white/90"></div>
@@ -587,8 +707,10 @@
         </div>
     </section>
 
+    </main>
+
     <!-- Footer -->
-    <footer class="bg-gray-100 py-12 text-sm text-gray-500">
+    <footer class="bg-gray-100 py-12 text-sm text-gray-500" role="contentinfo">
         <div class="container mx-auto px-4 text-center">
             <div class="mb-4">
                 <span class="font-bold text-gray-800 text-lg">해달에듀</span>
