--- a/index.html
+++ b/index.html
@@ -348,83 +348,21 @@
             </div>
 
             <div class="max-w-4xl mx-auto">
-                <!-- Video Grid -->
-                <div class="grid md:grid-cols-2 gap-6">
-                    <!-- Video 1 -->
-                    <div class="bg-gray-50 rounded-2xl overflow-hidden shadow-sm">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
-                            <!-- YouTube Embed Placeholder - Replace VIDEO_ID_1 with actual ID -->
-                            <iframe
-                                class="w-full h-full"
-                                src="https://www.youtube.com/embed/VIDEO_ID_1"
-                                title="옥토스튜디오 기초 1"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-bold text-gray-800">1강. 옥토스튜디오 시작하기</h3>
-                            <p class="text-sm text-gray-500 mt-1">앱 설치부터 기본 사용법까지</p>
-                        </div>
+                <!-- Coming Soon Notice -->
+                <div class="bg-gradient-to-br from-orange-50 to-yellow-50 border-2 border-orange-200 rounded-2xl p-8 md:p-12 text-center">
+                    <div class="text-6xl mb-4">🎬</div>
+                    <h3 class="text-2xl font-bold text-gray-800 mb-3">교육 영상 준비 중!</h3>
+                    <p class="text-gray-600 mb-6 break-keep">
+                        더욱 알차고 재미있는 교육 영상을 준비하고 있어요.<br/>
+                        조금만 기다려주세요!
+                    </p>
+                    <div class="inline-flex items-center gap-2 bg-orange-500 text-white px-6 py-3 rounded-full font-bold text-lg">
+                        <span>📅</span>
+                        <span>1월 26일 공개 예정</span>
                     </div>
-
-                    <!-- Video 2 -->
-                    <div class="bg-gray-50 rounded-2xl overflow-hidden shadow-sm">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
-                            <!-- YouTube Embed Placeholder - Replace VIDEO_ID_2 with actual ID -->
-                            <iframe
-                                class="w-full h-full"
-                                src="https://www.youtube.com/embed/VIDEO_ID_2"
-                                title="옥토스튜디오 기초 2"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-bold text-gray-800">2강. 캐릭터 움직이기</h3>
-                            <p class="text-sm text-gray-500 mt-1">블록으로 캐릭터에 생명을 불어넣어요</p>
-                        </div>
-                    </div>
-
-                    <!-- Video 3 -->
-                    <div class="bg-gray-50 rounded-2xl overflow-hidden shadow-sm">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
-                            <!-- YouTube Embed Placeholder - Replace VIDEO_ID_3 with actual ID -->
-                            <iframe
-                                class="w-full h-full"
-                                src="https://www.youtube.com/embed/VIDEO_ID_3"
-                                title="옥토스튜디오 기초 3"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-bold text-gray-800">3강. 소리와 인터랙션 추가</h3>
-                            <p class="text-sm text-gray-500 mt-1">흔들기, 터치 등 재미있는 기능 활용</p>
-                        </div>
-                    </div>
-
-                    <!-- Video 4 -->
-                    <div class="bg-gray-50 rounded-2xl overflow-hidden shadow-sm">
-                        <div class="aspect-video bg-gray-200 flex items-center justify-center">
-                            <!-- YouTube Embed Placeholder - Replace VIDEO_ID_4 with actual ID -->
-                            <iframe
-                                class="w-full h-full"
-                                src="https://www.youtube.com/embed/VIDEO_ID_4"
-                                title="옥토스튜디오 기초 4"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
-                        </div>
-                        <div class="p-4">
-                            <h3 class="font-bold text-gray-800">4강. 새해 카드 완성하기</h3>
-                            <p class="text-sm text-gray-500 mt-1">챌린지 미션 작품 만들기</p>
-                        </div>
-                    </div>
+                    <p class="text-sm text-gray-500 mt-6">
+                        참가 신청을 하시면 영상 공개 시 문자로 안내해드립니다!
+                    </p>
                 </div>
 
                 <p class="text-center text-gray-500 text-sm mt-6">
