edit orange color to purple

--- a/index.html
+++ b/index.html
@@ -385,14 +385,14 @@
 
             <div class="max-w-4xl mx-auto">
                 <!-- Coming Soon Notice -->
-                <div class="bg-gradient-to-br from-orange-50 to-yellow-50 border-2 border-orange-200 rounded-2xl p-8 md:p-12 text-center">
+                <div class="bg-gradient-to-br from-point-purple/10 to-white border-2 border-point-purple/30 rounded-2xl p-8 md:p-12 text-center">
                     <div class="text-6xl mb-4">🎬</div>
                     <h3 class="text-2xl font-bold text-gray-800 mb-3">교육 영상 준비 중!</h3>
                     <p class="text-gray-600 mb-6 break-keep">
                         더욱 알차고 재미있는 교육 영상을 준비하고 있어요.<br/>
                         조금만 기다려주세요!
                     </p>
-                    <div class="inline-flex items-center gap-2 bg-orange-500 text-white px-6 py-3 rounded-full font-bold text-lg">
+                    <div class="inline-flex items-center gap-2 bg-point-purple text-white px-6 py-3 rounded-full font-bold text-lg">
                         <span>📅</span>
                         <span>1월 26일 공개 예정</span>
                     </div>
