--- a/index.html
+++ b/index.html
@@ -383,22 +383,68 @@
                 <p class="text-gray-600">처음이어도 괜찮아요! 영상을 따라하면 누구나 만들 수 있어요.</p>
             </div>
 
-            <div class="max-w-4xl mx-auto">
-                <!-- Coming Soon Notice -->
-                <div class="bg-gradient-to-br from-point-purple/10 to-white border-2 border-point-purple/30 rounded-2xl p-8 md:p-12 text-center">
-                    <div class="text-6xl mb-4">🎬</div>
-                    <h3 class="text-2xl font-bold text-gray-800 mb-3">교육 영상 준비 중!</h3>
-                    <p class="text-gray-600 mb-6 break-keep">
-                        더욱 알차고 재미있는 교육 영상을 준비하고 있어요.<br/>
-                        조금만 기다려주세요!
-                    </p>
-                    <div class="inline-flex items-center gap-2 bg-point-purple text-white px-6 py-3 rounded-full font-bold text-lg">
-                        <span>📅</span>
-                        <span>1월 26일 공개 예정</span>
-                    </div>
-                    <p class="text-sm text-gray-500 mt-6">
-                        참가 신청을 하시면 영상 공개 시 문자로 안내해드립니다!
-                    </p>
+            <div class="max-w-5xl mx-auto">
+                <!-- Video Grid -->
+                <div class="grid md:grid-cols-3 gap-6">
+                    <!-- 1차시 -->
+                    <a href="https://youtu.be/EZBodf2mYlU" target="_blank" class="bg-white rounded-2xl shadow-lg overflow-hidden hover:shadow-xl transition group">
+                        <div class="aspect-video relative">
+                            <img
+                                src="https://img.youtube.com/vi/EZBodf2mYlU/hqdefault.jpg"
+                                alt="1차시 교육 영상 썸네일"
+                                class="w-full h-full object-cover"
+                            />
+                            <div class="absolute inset-0 bg-black/30 flex items-center justify-center group-hover:bg-black/40 transition">
+                                <div class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center shadow-lg">
+                                    <svg class="w-8 h-8 text-white ml-1" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <span class="inline-block px-3 py-1 bg-point-purple/10 text-point-purple text-sm font-bold rounded-full mb-2">1차시</span>
+                            <h4 class="font-bold text-gray-800">옥토스튜디오 시작하기</h4>
+                        </div>
+                    </a>
+
+                    <!-- 2차시 -->
+                    <a href="https://youtu.be/h7x86DKWJ8I" target="_blank" class="bg-white rounded-2xl shadow-lg overflow-hidden hover:shadow-xl transition group">
+                        <div class="aspect-video relative">
+                            <img
+                                src="https://img.youtube.com/vi/h7x86DKWJ8I/hqdefault.jpg"
+                                alt="2차시 교육 영상 썸네일"
+                                class="w-full h-full object-cover"
+                            />
+                            <div class="absolute inset-0 bg-black/30 flex items-center justify-center group-hover:bg-black/40 transition">
+                                <div class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center shadow-lg">
+                                    <svg class="w-8 h-8 text-white ml-1" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <span class="inline-block px-3 py-1 bg-point-purple/10 text-point-purple text-sm font-bold rounded-full mb-2">2차시</span>
+                            <h4 class="font-bold text-gray-800">새해 감사 카드 만들기</h4>
+                        </div>
+                    </a>
+
+                    <!-- 3차시 -->
+                    <a href="https://youtu.be/JymYDqtylHE" target="_blank" class="bg-white rounded-2xl shadow-lg overflow-hidden hover:shadow-xl transition group">
+                        <div class="aspect-video relative">
+                            <img
+                                src="https://img.youtube.com/vi/JymYDqtylHE/hqdefault.jpg"
+                                alt="3차시 교육 영상 썸네일"
+                                class="w-full h-full object-cover"
+                            />
+                            <div class="absolute inset-0 bg-black/30 flex items-center justify-center group-hover:bg-black/40 transition">
+                                <div class="w-16 h-16 bg-red-600 rounded-full flex items-center justify-center shadow-lg">
+                                    <svg class="w-8 h-8 text-white ml-1" fill="currentColor" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <span class="inline-block px-3 py-1 bg-point-purple/10 text-point-purple text-sm font-bold rounded-full mb-2">3차시</span>
+                            <h4 class="font-bold text-gray-800">가족 리액션 영상 찍고 챌린지 도전하기</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <p class="text-center text-gray-500 text-sm mt-6">
