--- a/index.html
+++ b/index.html
@@ -946,5 +946,15 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSC87LCT"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9R8RC9HF3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-M9R8RC9HF3');
+    </script> 
+    <!-- End Google tag (gtag.js) -->
 </body>
 </html>
