--- a/index.html
+++ b/index.html
@@ -947,14 +947,14 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M9R8RC9HF3"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P4TFQ3FTK"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-M9R8RC9HF3');
-    </script> 
+    gtag('config', 'G-6P4TFQ3FTK');
+    </script>
     <!-- End Google tag (gtag.js) -->
 </body>
 </html>
